// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SaveButton should match snapshot, extraClasses 1`] = `
<div>
  <button
    class="save-button btn btn-primary some-class"
    data-testid="saveSetting"
    id="saveSetting"
    type="submit"
  >
    <span>
      Save
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on defaultMessage 1`] = `
<div>
  <button
    class="save-button btn btn-primary"
    data-testid="saveSetting"
    id="saveSetting"
    type="submit"
  >
    <span>
      Go
    </span>
  </button>
</div>
`;

exports[`components/SaveButton should match snapshot, on savingMessage 1`] = `
<div>
  <button
    class="save-button btn btn-primary"
    data-testid="saveSetting"
    disabled=""
    id="saveSetting"
    type="submit"
  >
    <span
      class="LoadingSpinner with-text"
      id="loadingSpinner"
    >
      <span
        class="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
      Saving Config...
    </span>
  </button>
</div>
`;
